Tue Apr 22 19:35:03 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_initialize): Remove an undocumented
	  feature (passing a block to the constructor) that's broken.
	  This is not what I intended.

Tue Apr 22 17:49:46 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): should protect temporary string from
	  GC.   [ruby-dev:34480]

Tue Apr 22 17:12:05 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_search): string might be NULL.  [ruby-core:16478]

Tue Apr 22 16:44:00 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* object.c (rb_obj_tap): Correct documentation; pointed out by
	  okkez in [ruby-dev:34472].

Tue Apr 22 10:05:51 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (eaccess): workaround for recent msvcrt's behavior.
	  [ruby-core:16460]

Mon Apr 21 16:06:47 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enumerator_init): preserve the method name in ID.

	* enumerator.c (enumerator_each): need not to call rb_to_id().

	* enumerator.c (enumerator_with_index): ditto.

Mon Apr 21 17:19:52 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_f_method_name): New gloval function: __method__;
	  backported from matzruby / 1.9.

	* eval.c (rb_frame_this_func), intern.h: New internal function.

	* intern.h (RETURN_ENUMERATOR): Use rb_frame_this_func() instead
	  of rb_frame_last_func(), to accommodate the behavior to that of
	  1.9.

Mon Apr 21 15:54:48 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/tempfile.rb (Tempfile::_close): check @data before modifying
	  it; backported from 1.9.  [ruby-dev:34094]

	* lib/tempfile.rb (Tempfile::close): clear @data and @tmpname.

Mon Apr 21 10:17:17 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c: should include <errno.h> to refer errno.

Mon Apr 21 10:02:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (recursive_hash): prototype.

Mon Apr 21 10:00:51 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
