@@ -74,4 +74,11 @@ class TestSymbol < Test::Unit::TestCase
     assert_inspect_evaled(':$0')
     assert_inspect_evaled(':$1')
   end
+
+  def test_to_proc
+    assert_equal %w(1 2 3), (1..3).map(&:to_s)
+    assert_nothing_raised(ArgumentError) { :object_id.to_proc.call([]) }
+    assert_nothing_raised(ArgumentError) { :object_id.to_proc.call([1]) }
+    assert_nothing_raised(ArgumentError) { :object_id.to_proc.call([1,2]) }
+  end
 end
