@@ -232,6 +232,10 @@ with all sufficient information, see the ChangeLog file.
 
     Return an enumerator if no block is given.
 
+  * Symbol#to_proc
+
+    New method.
+
   * __method__
 
     New global function that returns the name of the current method as
